NEXT RELEASE
 - Added requires attribute to o.Trait so that traits can declare a
   base-line interface that they require to be installed onto an
   object.

0.0.8 : 2014-01-03
 - In addition to accepting an Array, o.DuckType now accepts an Object,
   allowing for type checking.
 - Added o.PatternType for creating types that match against a RegExp.
 - Added bower.json so that Bower has some more info about this package.
 - Attribute/Trait.install() now supports a second argument for specifying
   the value of the attribute(s).
 - The attributes attribute of Trait is now an object instead of an array.
 - Added o.local() to localize object property changes to a scope.
 - Attribute properties reader, writer, predicate, and clearer now take
   false instead of null.
 - An attribute's writer property now defaults to false to support the best
   practice of immutable objects.
 - Avoid a race condition when filters depend on other attributes being
   set during object construction.
 - Added a builder argument to o.writer and o.Attribute which provides a
   method-based alternative to devoid.
 - Constructors now get a trait applied to them that exposes a type and
   trait attribute.
 - Traits now have a type attribute which returns a Duck type that can be
   used to validate that an object exposes an interface compatible with
   the trait.

0.0.7 : 2013-06-18
 - Attributes on Traits (and Constructors) can now be pre-made o.Attribute
   objects which may be re-used.
 - Optimize some bits to produce a smaller minified output.
 - Remove o.is functions.. again, they are a nice-to-have that just bloats things.
 - Remove the special initArgs for attributes and traits in Attribute.
 - Support Travis CI.

0.0.6 : 2013-05-27
 - Merge o-types and o-attributes in to the main library.
 - New Trait and Constructor objects.
 - Redesign types so that each type is an object with coercions.
 - Migrate tests for QUnit to tap, and add many new tests.
 - Many many new tests.